2007-09-04  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/: Move workaround_flags from
	protocol_config to ipmi_config.  Move LOCK_MEMORY from a security
	flags to an engine_flag.  Rename security flags to behavior flags.
	
2007-09-01  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/: Adjust callback parameters for
	more generic use.

	* configure.ac: Check for threads support in gcrypt.
	
2007-08-31  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_engine_submit_block): Fix fd leak corner case.
	
2007-08-30  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/, ipmiconsole/, common/doc: Change ASUS ipmi 2.0
	workaround to be a more generic "ignore sol payload size".

	* Fix consistency issue with macro names between libraries.

	* Various manpage groff/text formatting fixes.

	*
	common/doc/manpage-common-workaround-outofband-2-0-only-text.man:
	Rename to manpage-common-workaround-sol-only-text.man due to
	usage.

	* ipmiconsole/ipmiconsole.8.pre.in: Fix for file name change.

	* ipmiconsole/src/ipmiconsole/ipmiconsole.c (main): Tear down SOL
	sessions cleanly by default.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_garbage_collector.c
	(ipmiconsole_garbage_collector): Fix destructor corner case.
	
2007-08-29  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/: Begin support errnum locking
	and required retrieval of error code.

2007-08-28  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c: New files.

	* ipmiconsole/src/libipmiconsole: Continue re-factoring
	re-organization.  Support ipmiconsole_engine_config structure.
	Support non-blocking callbacks.

	* General code cleanup throughout.
	
2007-08-24  Albert Chu <chu11@llnl.gov>

	* Document motherboard P5MT-R Asus 'authcap' workarounds.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c
	(_process_ctxs): Fix new console port corner case.
